<resources>
    <string name="app_name">T.T.S.</string>
    <string name="title">Taipei Tech App</string>
    <string name="donate_text">Donate</string>
    <string name="play_store_text">Play store</string>
    <string name="play_store_not_support">Cannot open play store！</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="web_back_hint">To back to the previous page, press the back button.</string>
    <string name="back">Back</string>
    <string name="start_query">Refresh</string>
    <string name="tool_text">Menu</string>
    <string name="menu_prompt">function</string>
    <string name="check_network_available">Please check your network status and try again.</string>
    <string name="version_text">version %s by NPC</string>
    <string name="original_developer">based on Alen Chiou\'s</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="account_password_empty_toast_text">Please set account at \"Account\" first!</string>
    <string name="activity_text">Event</string>
    <string name="share_using">Share</string>
    <string name="activity_update">Update</string>
    <string name="activity_detail">Event detail</string>
    <string name="activity_date">Date：</string>
    <string name="activity_startdate">Start date：</string>
    <string name="activity_enddate">End date：</string>
    <string name="activity_updated">Data updated.</string>
    <string name="activity_noevent">Data updated, and no event information now.</string>
    <string name="calendar_text">Calendar</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="calendar_update">Update</string>
    <string name="calendar_updated">Calendar updated.</string>
    <string name="calendar_loading">Loading…</string>
    <string name="calendar_update_first">Please update calendar first!</string>
    <string name="calendar_not_support">The device does not support this function.</string>
    <string name="course_text">Course</string>
    <string name="id_text">Student ID</string>
    <string name="search_text">Search</string>
    <string name="course_semester">Semester</string>
    <string name="course_loading">Loading…</string>
    <string name="course_load_course">Loading courses…</string>
    <string name="course_load_semester">Loading semester…</string>
    <string name="course_login_portal">Loging in NTUT portal…</string>
    <string name="course_click_for_detail">Click course block for detail.</string>
    <string name="course_no_studentid_typed">Type student id first!</string>
    <string name="course_nocourse">No course displayed now, cannot set as offline data.</string>
    <string name="course_nosemester">No Course</string>
    <string name="course_offline_save">Save course as offline data</string>
    <string name="course_offline_clear">Clear offline course data</string>
    <string name="course_offline_cleared">Offline data cleared.</string>
    <string name="course_offline_saved">Offline date saved.</string>
    <string name="course_classmeeting">Cannot provide detail about class meeting.</string>
    <string name="course_detail_title">Course Detail</string>
    <string name="course_detail">Course Detail</string>
    <string name="course_classdetail">Detail (Chinese only)</string>
    <string name="course_courseid">Course ID：</string>
    <string name="course_classplace">Place：</string>
    <string name="course_classteacher">Teacher：</string>
    <string name="course_classtime">Time：</string>
    <string name="classmates">Classmates</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="Su">Su</string>
    <string name="Mo">Mo</string>
    <string name="Tu">Tu</string>
    <string name="We">We</string>
    <string name="Th">Th</string>
    <string name="Fr">Fr</string>
    <string name="Sa">Sa</string>
    <string name="first">1</string>
    <string name="second">2</string>
    <string name="third">3</string>
    <string name="fourth">4</string>
    <string name="fifth">5</string>
    <string name="sixth">6</string>
    <string name="seventh">7</string>
    <string name="eighth">8</string>
    <string name="ninth">9</string>
    <string name="tenth">A</string>
    <string name="eleventh">B</string>
    <string name="twelfth">C</string>
    <string name="thirteenth">D</string>
    <string name="credit_text">Credit</string>
    <string name="semester">Semester</string>
    <string name="year">Admission Year</string>
    <string name="division">Division</string>
    <string name="department">Department</string>
    <string name="credit_class_rank">Class rank</string>
    <string name="credit_group_rank">Group rank</string>
    <string name="credit_department_rank">Department rank</string>
    <string name="credit_type">Type</string>
    <string name="credit_authorities_common_compulsory">○Dept. Common Required</string>
    <string name="credit_school_common_compulsory">△University Common Required</string>
    <string name="credit_common_elective">☆Common Elective</string>
    <string name="credit_authorities_vocational_elective">●Dept. Major Required</string>
    <string name="credit_school_vocational_compulsory">▲University Major Required</string>
    <string name="credit_vocational_elective">★Major Elective</string>
    <string name="credit_maximum_elective">Max. Credits for Inter-Dept. Elective</string>
    <string name="credit_minimum_graduation">Min. Credits for Graduation</string>
    <string name="credit_error">Some trouble happened, please try again later.</string>
    <string name="credit_imformation_complete">Information updated</string>
    <string name="credit_final">Let\'s check your nightmare :p</string>
    <string name="credit_updating">Updating credit information…</string>
    <string name="credit_essential_core">Essential:</string>
    <string name="credit_setting_graduation">Set graduation threshold</string>
    <string name="credit_choose_enter_semester">Set admission year</string>
    <string name="credit_loading_academic_system">Loading division list…</string>
    <string name="credit_loading_semester_list">Loading admission year list…</string>
    <string name="credit_loading_faculty_list">Loading department list…</string>
    <string name="credit_loading_graduation_credits">Loading graduation threshold…</string>
    <string name="credit_admission_criteria_error">Admission criteria is not set up!</string>
    <string name="credit_sum">Total：</string>
    <string name="credit_query">Search credit information</string>
    <string name="credit_standard_credit">Set graduation threshold</string>
    <string name="credit_clear">Clear credit information</string>
    <string name="credit_clear_standard_credit">Clear threshold setting</string>
    <string name="credit">Total:</string>
    <string name="overview_credit">Credit Overview</string>
    <string name="overview_general">General education</string>
    <string name="credit_general_core">Core:</string>
    <string name="credit_general_elective">Elective:</string>
    <string name="cultural_dimension">Culture</string>
    <string name="historical_dimension">History</string>
    <string name="philosophical_dimension">. Philosophy</string>
    <string name="legal_dimension">Law</string>
    <string name="social_dimension">Social</string>
    <string name="natural_dimension">Nature</string>
    <string name="social_philosophy_dimension">Social Phil. .</string>
    <string name="creative_dimension">Creativity</string>
    <string name="wifi_text">Connect to ntutcc</string>
    <string name="current_wifi">Current detected hotspots</string>
    <string name="login">Login</string>
    <string name="scan">Rescan</string>
    <string name="wifi_autoconnect_disabled">Auto connection disabled.</string>
    <string name="wifi_ntutcc_only">Provide ntutcc login ONLY</string>
    <string name="wifi_permission_error">No permission granted, cannot provide the function.</string>
    <string name="feedback_text">Feedback</string>
    <string name="question_or_suggestion">Problems and Suggestions</string>
    <string name="feedback_hint">Sincerely thanks for contacting us. \nYour advice is the greatest push for our progress.</string>
    <string name="feedback_contact">Your Email</string>
    <string name="feedback_contact_hint">Please leave your email here.</string>
    <string name="feedback_send_suceed">Sent successfully</string>
    <string name="feedback_blank_forbid">Do not send empty feedback</string>
    <string name="feedback_finish">Sincerely thanks for contacting us and we\'ll get back to you as fast as possible.</string>
    <string name="feedback_check">"You're not fill in the contact information, we'll send it as anonymous and couldn't respond you properly. Are you sure? "</string>
    <string name="etc_text">Settings</string>
    <string name="etc_language_en">EN</string>
    <string name="etc_language_zh">中</string>
    <string name="etc_language_ja">日</string>
    <string name="etc_uilanguage_text">UI Language</string>
    <string name="etc_uilanguage_hint">will restart to apply changes</string>
    <string name="etc_courselanguage_text">Course Language</string>
    <string name="etc_courselanguage_hint">also affect part of credit page</string>
    <string name="etc_courselanguage_applied">Change applied, please update course manually</string>
    <string name="account_setting_text">Account</string>
    <string name="portal_title">Taipei Tech Portal</string>
    <string name="password_text">Password</string>
    <string name="save_button">Save</string>
    <string name="clear_button">Clear</string>
    <string name="nportal_loggingin">Logging in</string>
    <string name="nportal_text">Taipei Tech Portal</string>
    <string name="right_link"><u>Disclaimer</u></string>
    <string name="right_text">Disclaimer</string>
    <string name="right">"The application is for testing and NOT guarantee its functionality, please use it at your own risk. Also, we are NOT assume responsibilities to anyone for any reasons, close and uninstall if you are not accept. "</string>
    <string name="save_success">Account data saved</string>
    <string name="account_empty_error_message">Student id is empty</string>
    <string name="password_empty_error_message">Password is empty</string>
    <string name="none_account_error">Please set account at \\\"Account\\\" first.</string>
    <string name="hint">Hint</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="Exception_loginNportal">Please set account at \"Account\" first!</string>
    <string name="send">Send</string>
    <string name="portal">Taipei Tech Portal</string>
    <string name="account_check">Please set account at \"Account\" first!</string>
    <string name="wifi_title">Ntutcc</string>
    <string name="wifi_message">Connect to ntutcc successfully!</string>
    <string name="wifi_needenable">Wi-fi is disabled, would you want to enable?</string>
    <string name="wifi_enable">Enable</string>
    <string name="wifi_login">ntutcc autoconnection</string>
    <string name="wifi_try">Connecting to ntutcc</string>
    <string name="wifi_none">Cannot find ntutcc</string>
    <string name="wifi_scan">Scanning wifi…</string>
    <string name="wifi_wait">Please wait…</string>
    <string name="wifi_already_connected">ntutcc is already connected</string>
    <string name="other_text">其他</string>
    <string name="school_map_text">校園地圖</string>
    <string name="store_text">特約商店</string>
    <string name="about_text">關於</string>
    <string name="club_text">社團介紹</string>
    <string name="location">地點：</string>
</resources>