<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#eee">

    <include layout="@layout/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/uiLang_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/etc_uilanguage_text"
            android:textColor="?attr/editTextColor"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/uiLangHint_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/etc_uilanguage_hint"
            android:textColor="?android:attr/textColorHint"
            app:layout_constraintStart_toStartOf="@+id/uiLang_textView"
            app:layout_constraintTop_toBottomOf="@+id/uiLang_textView" />

        <TextView
            android:id="@+id/uiE_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/etc_language_en"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toBottomOf="@+id/uiLang_textView"
            app:layout_constraintEnd_toStartOf="@+id/uiC_textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/uiLang_seekBar"
            app:layout_constraintTop_toTopOf="@+id/uiLang_textView" />

        <TextView
            android:id="@+id/uiC_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/uiE_textView"
            android:layout_toEndOf="@+id/uiE_textView"
            android:layout_toRightOf="@+id/uiE_textView"
            android:text="@string/etc_language_zh"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/uiJ_textView"
            app:layout_constraintStart_toEndOf="@id/uiE_textView"
            app:layout_constraintTop_toTopOf="@+id/uiE_textView" />

        <TextView
            android:id="@+id/uiJ_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/etc_language_ja"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="@+id/uiLang_seekBar"
            app:layout_constraintStart_toEndOf="@id/uiC_textView"
            app:layout_constraintTop_toTopOf="@+id/uiE_textView" />

        <SeekBar
            android:id="@+id/uiLang_seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:isScrollContainer="false"
            android:max="100"
            app:layout_constraintBottom_toBottomOf="@+id/uiLangHint_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/courseLang_seekBar"
            app:layout_constraintTop_toTopOf="@+id/uiLangHint_textView" />


        <TextView
            android:id="@+id/courseLang_textView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/etc_courselanguage_text"
            android:textColor="?attr/editTextColor"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uiLangHint_textView" />

        <TextView
            android:id="@+id/courseLangHint_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/courseLang_textView"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/etc_courselanguage_hint"
            android:textColor="?android:attr/textColorHint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/courseLang_textView"
            app:layout_constraintTop_toBottomOf="@+id/courseLang_textView" />

        <TextView
            android:id="@+id/courseE_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/etc_language_en"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toBottomOf="@+id/courseLang_textView"
            app:layout_constraintEnd_toStartOf="@+id/courseC_textView"
            app:layout_constraintStart_toStartOf="@+id/courseLang_seekBar"
            app:layout_constraintTop_toTopOf="@+id/courseLang_textView" />

        <TextView
            android:id="@+id/courseC_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/etc_language_zh"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="@+id/courseLang_seekBar"
            app:layout_constraintStart_toEndOf="@+id/courseE_textView"
            app:layout_constraintTop_toTopOf="@+id/courseE_textView" />

        <SeekBar
            android:id="@+id/courseLang_seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:max="100"
            app:layout_constraintBottom_toBottomOf="@+id/courseLangHint_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/courseLangHint_textView"
            app:layout_constraintTop_toTopOf="@+id/courseLangHint_textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>